syntax = "proto3";
package task;
option go_package = "github.com/lidi-a/project-protos/proto/task";

import "google/protobuf/empty.proto";

// Сущность задача
message Task {
  uint32 id      = 1;
  string title   = 2;
}

message CreateTaskRequest {
  string title = 1;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  uint32 id      = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  Task task = 1;
}

message DeleteTaskRequest {
  uint32 id      = 1;
}

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask    (GetTaskRequest)             returns (GetTaskResponse);
  rpc ListTasks (google.protobuf.Empty) returns (ListTasksResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (google.protobuf.Empty);
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty);
}