syntax = "proto3";
package user;
option go_package = "github.com/lidi-a/project-protos/proto/user";

import "google/protobuf/empty.proto";

// Сущность пользователь (минимум полей)
message User {
  uint32 id    = 1;
  string email = 2;
}

// Запрос на создание
message CreateUserRequest {
  string email = 1;
}
message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  uint32 id      = 1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
}